# udp-highrate-cpp

./: .dockerignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
diagrams/: architecture.puml  diagrams.md  flow_client.puml  flow_server.puml  sequence.puml
docker/: Dockerfile  docker-compose.yml
include/udp/: client.hpp  common.hpp  metrics_http.hpp  server.hpp  socket.hpp  stats.hpp
slides/: presentation.md
src/: client.cpp  main_client.cpp  main_server.cpp  metrics_http.cpp  server.cpp  socket.cpp  stats.cpp
tests/: CMakeLists.txt  test_client_logic.cpp  test_packet.cpp  test_server_logic.cpp  test_socket_mock.cpp  test_stats.cpp
tools/: build_with_system_gtest.sh  commit_plan.sh  run_coverage.sh  run_e2e_local.sh  tuning.md
tools/prom/: grafana_dashboard.json  prometheus.yml
